--- a/style.css
+++ b/style.css
@@ -29,15 +29,15 @@ li{
 
 .search-bar{
     
-    padding: 8px 0px 8px 0px;
+    padding: 8px 24px 8px 24px;
     max-width: 420px;
     width: 100%;
-    text-align: right;
+    text-align: left;
     font-family: 'Imbue', serif;
     font-size: 32px;
     color: #fff;
     background-color: inherit;
-    border-radius: 27px;
+    border-radius: 50px;
     border: #fff solid 1px;
     cursor: pointer;
     
@@ -82,22 +82,16 @@ h3{
 
 }
 
-section{
-    margin: 164px 0px 0px 0px;
-}
 .section_1_leftside{
-    max-width: 49%;
-    margin: 0px 0px 0px 190px;
-    vertical-align: middle;
+    max-width: 50%;
 }
 .section_1_rightside{
-    max-width: 49%;
-    margin:0px 190px 0px 0px ;
+    max-width: 50%;
 }
 .vertical-line{
     position: absolute;
     border-left: 5px solid #fff;
     height: 860px;
-    left: 50%;
+    left: 10%;
     border-radius: 20px;
 }
